--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		
 		<meta http-equiv="Content-Tipe" content="text/html; charset=UTF-8"/>
 		<link href="style.css" rel="stylesheet" type="text/css"/>
-		<link rel="icon" href="путь_к_иконке/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<title>Горные породы</title>
 		<script href="js.js"></script>
 	</head>
@@ -25,7 +25,7 @@
 			</article>
 			<article>	
 					<center><h3><a href="s2/s2.html">Осадочные</a></h3></center>
-					<p><img src="o1.png"/><img src="o2.jpg"/><a href="s2.html">Подробнее...</a></p>
+					<p><img src="o1.jpg"/><img src="o2.jpg"/><a href="s2.html">Подробнее...</a></p>
 			</article>
 			<article>
 				<center><h3><a href="s3/s3.html">Метаморфические</a></h3></center>
@@ -33,6 +33,11 @@
 			</article>
 			<article>
 				<center><h3><a href="test.html">Тест по горным породам</a></h3></center>
+				<p><img src="test.jpg"/></p>
+			</article>
+			<article>
+				<center><h3><a href="rand.html">рандомный камень</a></h3></center>
+				<p><img src="box.jpg"/></p>
 			</article>
 		</div>
 	</body>
