--- a/s1/s1.html
+++ b/s1/s1.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta http-equiv="Content-Tipe" content="text/html; charset=UTF-8"/>
 		<link href="style.css" rel="stylesheet" type="text/css"/>
+		<link rel="icon" href="../favicon.ico" type="image/x-icon">
 		<title>магматические породы</title>
 	</head>
 	
