--- a/s2/s2.html
+++ b/s2/s2.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta http-equiv="Content-Tipe" content="text/html; charset=UTF-8"/>
 		<link href="style.css" rel="stylesheet" type="text/css"/>
+		<link rel="icon" href="../favicon.ico" type="image/x-icon">
 		<title>осадочные породы</title>
 	</head>
 	
@@ -368,6 +369,196 @@
 		<li><p>особые свойства, стуркутра, минеральный состав</p></li>
 		<li><p>хемогенное, осадочная горная порода</p></li>
 		<li><p>-</p></li>
+	</ol>
+</div>
+</div>
+
+
+<div id="d2">
+<center><img class="i1" src="конгломерат.jpg"/><center>
+<div class="desc">
+	<h1>конгломерат</h1>
+	<ol>
+		<li><p>кирпично-розовый</p></li>
+		<li><p>грубо обломочная, сцементированная</p></li>
+		<li><p>плотная, не ориентированная</p></li>
+		<li><p>железистый цемент, полевые шпаты, кремнистые породы</p></li>
+		<li><p>средняя плотность</p></li>
+		<li><p>-</p></li>
+		<li><p>структура</p></li>
+		<li><p>осадочное, обломочная горная порода</p></li>
+		<li><p>-</p></li>
+	</ol>
+</div>
+</div>
+
+
+<div id="d2">
+<center><img class="i1" src="брекчия.jpg"/><center>
+<div class="desc">
+	<h1>брекчия</h1>
+	<ol>
+		<li><p>молочно-вишневый</p></li>
+		<li><p>грубо обломочная, сцементированная, угловатые обломки</p></li>
+		<li><p>плотная, не ориентированная</p></li>
+		<li><p>карбонатно-железистый цемент, роговая обманка, гранит</p></li>
+		<li><p>средняя</p></li>
+		<li><p>карбнатный цемент дает реакцию с HCl</p></li>
+		<li><p>стуктура</p></li>
+		<li><p>осадочное, обломочная горная порода</p></li>
+		<li><p>-</p></li>
+	</ol>
+</div>
+</div>
+
+
+<div id="d2">
+<center><img class="i1" src="галька.jpg"/><center>
+<div class="desc">
+	<h1>галька</h1>
+	<ol>
+		<li><p>охристо-кремовый, от бежево-белого до коричневого</p></li>
+		<li><p>грубо обломочная, рыхлая</p></li>
+		<li><p>-</p></li>
+		<li><p>кварц, полевой шпат</p></li>
+		<li><p>средняя</p></li>
+		<li><p>-</p></li>
+		<li><p>структура, размер обломков</p></li>
+		<li><p>осадочное, обломочная горная порода</p></li>
+		<li><p>-</p></li>
+	</ol>
+</div>
+</div>
+
+
+<div id="d2">
+<center><img class="i1" src="гравий.jpg"/><center>
+<div class="desc">
+	<h1>гравий</h1>
+	<ol>
+		<li><p>от светло-бежевого до черно-коричневого</p></li>
+		<li><p>окатаноо обломочная, рыхлая</p></li>
+		<li><p>-</p></li>
+		<li><p>кварц, граниты, песчаники</p></li>
+		<li><p>средняя</p></li>
+		<li><p>-</p></li>
+		<li><p>размер обломков, структура</p></li>
+		<li><p>осадочное, обломочная порода</p></li>
+		<li><p>-</p></li>
+	</ol>
+</div>
+</div>
+
+
+<div id="d2">
+<center><img class="i1" src="щебень.jpg"/><center>
+<div class="desc">
+	<h1>щебень</h1>
+	<ol>
+		<li><p>от черного, до светло-серого</p></li>
+		<li><p>грубо обломочная, неокатанная, рыхлая</p></li>
+		<li><p>-</p></li>
+		<li><p>песчаники, железистые известняки</p></li>
+		<li><p>средняя</p></li>
+		<li><p>-</p></li>
+		<li><p>структура, размер обломков</p></li>
+		<li><p>осадочное, обломочная горная порода</p></li>
+		<li><p>-</p></li>
+	</ol>
+</div>
+</div>
+
+
+<div id="d2">
+<center><img class="i1" src="гравелит.jpg"/><center>
+<div class="desc">
+	<h1>гравелит</h1>
+	<ol>
+		<li><p>бежево-палево-коричневый</p></li>
+		<li><p>грубо обломочная, сцементированная</p></li>
+		<li><p>плотная, не ориентированная</p></li>
+		<li><p>железистый цемент, карбонатный цемент, кварц</p></li>
+		<li><p>средняя</p></li>
+		<li><p>карбнатный цемент дает реакцию с HCl</p></li>
+		<li><p>стуктура</p></li>
+		<li><p>осадочное, обломочная горная порода</p></li>
+		<li><p>-</p></li>
+	</ol>
+</div>
+</div>
+
+
+<div id="d2">
+<center><img class="i1" src="песок.jpg"/><center>
+<div class="desc">
+	<h1>песок</h1>
+	<ol>
+		<li><p>желтовато-бежевый</p></li>
+		<li><p>обломочная песчаная, рыхлая</p></li>
+		<li><p>-</p></li>
+		<li><p>кварц</p></li>
+		<li><p>средняя</p></li>
+		<li><p>-</p></li>
+		<li><p>мин. состав, структура</p></li>
+		<li><p>осадочное, обломочная горная порода</p></li>
+		<li><p>-</p></li>
+	</ol>
+</div>
+</div>
+
+
+<div id="d2">
+<center><img class="i1" src="песчаник.jpg"/><center>
+<div class="desc">
+	<h1>песчаник</h1>
+	<ol>
+		<li><p>бежево-рыжий</p></li>
+		<li><p>песчаная обломочная, сцементированная</p></li>
+		<li><p>плотная, не ориентированная</p></li>
+		<li><p>кварц, полевые шпаты, плагиоклазы</p></li>
+		<li><p>средняя</p></li>
+		<li><p>-</p></li>
+		<li><p>мин. состав, цвет, структура</p></li>
+		<li><p>осадочное, обломочная горная порода</p></li>
+		<li><p>-</p></li>
+	</ol>
+</div>
+</div>
+
+
+<div id="d2">
+<center><img class="i1" src="алевролит.jpg"/><center>
+<div class="desc">
+	<h1>алевролит</h1>
+	<ol>
+		<li><p>темно-серый, почти чёрный</p></li>
+		<li><p>мелкообломочная, сцементированная, слоистая</p></li>
+		<li><p>плотная, неориентированная</p></li>
+		<li><p>слюды, а так определить сложно из-за структуры</p></li>
+		<li><p>средняя</p></li>
+		<li><p>-</p></li>
+		<li><p>структура, блеск склюд</p></li>
+		<li><p>осадочное, обломочная горная порода</p></li>
+		<li><p>-</p></li>
+	</ol>
+</div>
+</div>
+
+
+<div id="d2">
+<center><img class="i1" src="лёсс.jpg"/><center>
+<div class="desc">
+	<h1>лёсс</h1>
+	<ol>
+		<li><p>палево-жёлтый</p></li>
+		<li><p>землистая</p></li>
+		<li><p>либо нет, либо мелкокристаллическая</p></li>
+		<li><p>кварц, кальцит</p></li>
+		<li><p>средняя</p></li>
+		<li><p>пачкает руки, реакция с HCl</p></li>
+		<li><p>осадочное, обломочная горная порода</p></li>
+		<li><p>-</p></li>
+		<li><p>0</p></li>
 	</ol>
 </div>
 </div>
