--- a/s3/s3.html
+++ b/s3/s3.html
@@ -5,27 +5,27 @@
 		<meta http-equiv="Content-Tipe" content="text/html; charset=UTF-8"/>
 		<link href="style.css" rel="stylesheet" type="text/css"/>
 		<link rel="icon" href="../favicon.ico" type="image/x-icon">
-		<title>метаморфические породы</title>
+		<title>РјРµС‚Р°РјРѕСЂС„РёС‡РµСЃРєРёРµ РїРѕСЂРѕРґС‹</title>
 	</head>
 	
 	<body>
 		<header>
-			<a id="a_1" href="../index.html">назад</a><h1>метаморфические горные породы</h1>
+			<a id="a_1" href="../index.html">РЅР°Р·Р°Рґ</a><h1>РјРµС‚Р°РјРѕСЂС„РёС‡РµСЃРєРёРµ РіРѕСЂРЅС‹Рµ РїРѕСЂРѕРґС‹</h1>
 		</header>
 		
 		<div id="d2">
-<center><img class="i1" src="гнейс.jpg"/><center>
+<center><img class="i1" src="РіРЅРµР№СЃ.jpg"/><center>
 <div class="desc">
-	<h1>гнейс</h1>
+	<h1>РіРЅРµР№СЃ</h1>
 	<ol>
-		<li><p>от светло-коричневого, до красноватого и черного</p></li>
-		<li><p>полнокристаллическая</p></li>
-		<li><p>гнейсовая, полосчатая, очковая</p></li>
-		<li><p>слюда, мусковит, кварц, плагиоклаз, роговая обманка</p></li>
-		<li><p>средняя</p></li>
+		<li><p>РѕС‚ СЃРІРµС‚Р»Рѕ-РєРѕСЂРёС‡РЅРµРІРѕРіРѕ, РґРѕ РєСЂР°СЃРЅРѕРІР°С‚РѕРіРѕ Рё С‡РµСЂРЅРѕРіРѕ</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ</p></li>
+		<li><p>РіРЅРµР№СЃРѕРІР°СЏ, РїРѕР»РѕСЃС‡Р°С‚Р°СЏ, РѕС‡РєРѕРІР°СЏ</p></li>
+		<li><p>СЃР»СЋРґР°, РјСѓСЃРєРѕРІРёС‚, РєРІР°СЂС†, РїР»Р°РіРёРѕРєР»Р°Р·, СЂРѕРіРѕРІР°СЏ РѕР±РјР°РЅРєР°</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>максимально разнообразны, все блестят</p></li>
-		<li><p>образуются путём дальнейшего повышения t и p из слюдяных сланцев (полностью исчезают влагосодержащие минералы), метаморфическая высокотемпературная горная порода</p></li>
+		<li><p>РјР°РєСЃРёРјР°Р»СЊРЅРѕ СЂР°Р·РЅРѕРѕР±СЂР°Р·РЅС‹, РІСЃРµ Р±Р»РµСЃС‚СЏС‚</p></li>
+		<li><p>РѕР±СЂР°Р·СѓСЋС‚СЃСЏ РїСѓС‚С‘Рј РґР°Р»СЊРЅРµР№С€РµРіРѕ РїРѕРІС‹С€РµРЅРёСЏ t Рё p РёР· СЃР»СЋРґСЏРЅС‹С… СЃР»Р°РЅС†РµРІ (РїРѕР»РЅРѕСЃС‚СЊСЋ РёСЃС‡РµР·Р°СЋС‚ РІР»Р°РіРѕСЃРѕРґРµСЂР¶Р°С‰РёРµ РјРёРЅРµСЂР°Р»С‹), РјРµС‚Р°РјРѕСЂС„РёС‡РµСЃРєР°СЏ РІС‹СЃРѕРєРѕС‚РµРјРїРµСЂР°С‚СѓСЂРЅР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -33,18 +33,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="кварцит.jpg"/><center>
+<center><img class="i1" src="РєРІР°СЂС†РёС‚.jpg"/><center>
 <div class="desc">
-	<h1>кварцит</h1>
+	<h1>РєРІР°СЂС†РёС‚</h1>
 	<ol>
-		<li><p>охристо-песчаный, может быть красноватым</p></li>
-		<li><p>полнокристаллическая</p></li>
-		<li><p>плотная, не ориентированная</p></li>
-		<li><p>кварц</p></li>
-		<li><p>средняя</p></li>
-		<li><p>не реагирует с HCl</p></li>
-		<li><p>цвет, текстура, мин состав</p></li>
-		<li><p>образуются в разных условиях из песков, трепел, опок и др пород, богатых кремнезёмном, метаморфическая горная порода</p></li>
+		<li><p>РѕС…СЂРёСЃС‚Рѕ-РїРµСЃС‡Р°РЅС‹Р№, РјРѕР¶РµС‚ Р±С‹С‚СЊ РєСЂР°СЃРЅРѕРІР°С‚С‹Рј</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ</p></li>
+		<li><p>РїР»РѕС‚РЅР°СЏ, РЅРµ РѕСЂРёРµРЅС‚РёСЂРѕРІР°РЅРЅР°СЏ</p></li>
+		<li><p>РєРІР°СЂС†</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
+		<li><p>РЅРµ СЂРµР°РіРёСЂСѓРµС‚ СЃ HCl</p></li>
+		<li><p>С†РІРµС‚, С‚РµРєСЃС‚СѓСЂР°, РјРёРЅ СЃРѕСЃС‚Р°РІ</p></li>
+		<li><p>РѕР±СЂР°Р·СѓСЋС‚СЃСЏ РІ СЂР°Р·РЅС‹С… СѓСЃР»РѕРІРёСЏС… РёР· РїРµСЃРєРѕРІ, С‚СЂРµРїРµР», РѕРїРѕРє Рё РґСЂ РїРѕСЂРѕРґ, Р±РѕРіР°С‚С‹С… РєСЂРµРјРЅРµР·С‘РјРЅРѕРј, РјРµС‚Р°РјРѕСЂС„РёС‡РµСЃРєР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -52,18 +52,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="тальковые_сланцы.jpg"/><center>
+<center><img class="i1" src="С‚Р°Р»СЊРєРѕРІС‹Рµ_СЃР»Р°РЅС†С‹.jpg"/><center>
 <div class="desc">
-	<h1>тальковые_сланцы</h1>
+	<h1>С‚Р°Р»СЊРєРѕРІС‹Рµ_СЃР»Р°РЅС†С‹</h1>
 	<ol>
-		<li><p>светло-зеленые, болотные, охристые</p></li>
-		<li><p>полнокристаллическая, мелкозернистая</p></li>
-		<li><p>сланцеватая</p></li>
-		<li><p>тальк, хлорит, амазонит</p></li>
-		<li><p>средняя</p></li>
-		<li><p>гладкие на ощупь, приятненькие</p></li>
-		<li><p>светло-зелёный цвет/ шелковистый или перламутровый блеск</p></li>
-		<li><p>образуются при регрессивном метаморфизме ультраосновных пород при средних значениях t и p, низкотемпературная метаморфическая горная порода</p></li>
+		<li><p>СЃРІРµС‚Р»Рѕ-Р·РµР»РµРЅС‹Рµ, Р±РѕР»РѕС‚РЅС‹Рµ, РѕС…СЂРёСЃС‚С‹Рµ</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ, РјРµР»РєРѕР·РµСЂРЅРёСЃС‚Р°СЏ</p></li>
+		<li><p>СЃР»Р°РЅС†РµРІР°С‚Р°СЏ</p></li>
+		<li><p>С‚Р°Р»СЊРє, С…Р»РѕСЂРёС‚, Р°РјР°Р·РѕРЅРёС‚</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
+		<li><p>РіР»Р°РґРєРёРµ РЅР° РѕС‰СѓРїСЊ, РїСЂРёСЏС‚РЅРµРЅСЊРєРёРµ</p></li>
+		<li><p>СЃРІРµС‚Р»Рѕ-Р·РµР»С‘РЅС‹Р№ С†РІРµС‚/ С€РµР»РєРѕРІРёСЃС‚С‹Р№ РёР»Рё РїРµСЂР»Р°РјСѓС‚СЂРѕРІС‹Р№ Р±Р»РµСЃРє</p></li>
+		<li><p>РѕР±СЂР°Р·СѓСЋС‚СЃСЏ РїСЂРё СЂРµРіСЂРµСЃСЃРёРІРЅРѕРј РјРµС‚Р°РјРѕСЂС„РёР·РјРµ СѓР»СЊС‚СЂР°РѕСЃРЅРѕРІРЅС‹С… РїРѕСЂРѕРґ РїСЂРё СЃСЂРµРґРЅРёС… Р·РЅР°С‡РµРЅРёСЏС… t Рё p, РЅРёР·РєРѕС‚РµРјРїРµСЂР°С‚СѓСЂРЅР°СЏ РјРµС‚Р°РјРѕСЂС„РёС‡РµСЃРєР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -71,18 +71,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="мрамор.jpg"/><center>
+<center><img class="i1" src="РјСЂР°РјРѕСЂ.jpg"/><center>
 <div class="desc">
-	<h1>мрамор</h1>
+	<h1>РјСЂР°РјРѕСЂ</h1>
 	<ol>
-		<li><p>от цвета слоновой кости, до черного, часто неоднотонные, с прожилками</p></li>
-		<li><p>полнокристаллическая</p></li>
-		<li><p>массивная</p></li>
-		<li><p>кальцит, доломит</p></li>
-		<li><p>средняя</p></li>
-		<li><p>дает реакцию с HCl</p></li>
-		<li><p>характерная окраска, текстура, реакция с соляной кислотой</p></li>
-		<li><p>образуются разных условиях из известняков, метаморфическая горная порода</p></li>
+		<li><p>РѕС‚ С†РІРµС‚Р° СЃР»РѕРЅРѕРІРѕР№ РєРѕСЃС‚Рё, РґРѕ С‡РµСЂРЅРѕРіРѕ, С‡Р°СЃС‚Рѕ РЅРµРѕРґРЅРѕС‚РѕРЅРЅС‹Рµ, СЃ РїСЂРѕР¶РёР»РєР°РјРё</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ</p></li>
+		<li><p>РјР°СЃСЃРёРІРЅР°СЏ</p></li>
+		<li><p>РєР°Р»СЊС†РёС‚, РґРѕР»РѕРјРёС‚</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
+		<li><p>РґР°РµС‚ СЂРµР°РєС†РёСЋ СЃ HCl</p></li>
+		<li><p>С…Р°СЂР°РєС‚РµСЂРЅР°СЏ РѕРєСЂР°СЃРєР°, С‚РµРєСЃС‚СѓСЂР°, СЂРµР°РєС†РёСЏ СЃ СЃРѕР»СЏРЅРѕР№ РєРёСЃР»РѕС‚РѕР№</p></li>
+		<li><p>РѕР±СЂР°Р·СѓСЋС‚СЃСЏ СЂР°Р·РЅС‹С… СѓСЃР»РѕРІРёСЏС… РёР· РёР·РІРµСЃС‚РЅСЏРєРѕРІ, РјРµС‚Р°РјРѕСЂС„РёС‡РµСЃРєР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -90,18 +90,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="глинистый_сланец.jpg"/><center>
+<center><img class="i1" src="РіР»РёРЅРёСЃС‚С‹Р№_СЃР»Р°РЅРµС†.jpg"/><center>
 <div class="desc">
-	<h1>глинистый_сланец</h1>
+	<h1>РіР»РёРЅРёСЃС‚С‹Р№_СЃР»Р°РЅРµС†</h1>
 	<ol>
-		<li><p>темно-серый цвет, почти чёрный, холодных оттенков болотно-зеленых</p></li>
-		<li><p>пилитовая структура</p></li>
-		<li><p>сланцеватая, плотная, не ориентированная текстура</p></li>
-		<li><p>глинистые минералы, хлорит, карбонаты</p></li>
-		<li><p>средняя</p></li>
+		<li><p>С‚РµРјРЅРѕ-СЃРµСЂС‹Р№ С†РІРµС‚, РїРѕС‡С‚Рё С‡С‘СЂРЅС‹Р№, С…РѕР»РѕРґРЅС‹С… РѕС‚С‚РµРЅРєРѕРІ Р±РѕР»РѕС‚РЅРѕ-Р·РµР»РµРЅС‹С…</p></li>
+		<li><p>РїРёР»РёС‚РѕРІР°СЏ СЃС‚СЂСѓРєС‚СѓСЂР°</p></li>
+		<li><p>СЃР»Р°РЅС†РµРІР°С‚Р°СЏ, РїР»РѕС‚РЅР°СЏ, РЅРµ РѕСЂРёРµРЅС‚РёСЂРѕРІР°РЅРЅР°СЏ С‚РµРєСЃС‚СѓСЂР°</p></li>
+		<li><p>РіР»РёРЅРёСЃС‚С‹Рµ РјРёРЅРµСЂР°Р»С‹, С…Р»РѕСЂРёС‚, РєР°СЂР±РѕРЅР°С‚С‹</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>темная, слоистая порода, на ощупь похожа на глину</p></li>
-		<li><p>метаморфическая низкотемпературная горная порода</p></li>
+		<li><p>С‚РµРјРЅР°СЏ, СЃР»РѕРёСЃС‚Р°СЏ РїРѕСЂРѕРґР°, РЅР° РѕС‰СѓРїСЊ РїРѕС…РѕР¶Р° РЅР° РіР»РёРЅСѓ</p></li>
+		<li><p>РјРµС‚Р°РјРѕСЂС„РёС‡РµСЃРєР°СЏ РЅРёР·РєРѕС‚РµРјРїРµСЂР°С‚СѓСЂРЅР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -109,18 +109,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="филлит.jpg"/><center>
+<center><img class="i1" src="С„РёР»Р»РёС‚.jpg"/><center>
 <div class="desc">
-	<h1>филлит</h1>
+	<h1>С„РёР»Р»РёС‚</h1>
 	<ol>
-		<li><p>светло-серый, зеленоватый, с шелковистым блеском</p></li>
-		<li><p>полнокристаллическая, мелкозернистая, почти пилитовая</p></li>
-		<li><p>сланцеватая </p></li>
-		<li><p>мусковит, кварц, хлорит</p></li>
-		<li><p>средняя</p></li>
+		<li><p>СЃРІРµС‚Р»Рѕ-СЃРµСЂС‹Р№, Р·РµР»РµРЅРѕРІР°С‚С‹Р№, СЃ С€РµР»РєРѕРІРёСЃС‚С‹Рј Р±Р»РµСЃРєРѕРј</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ, РјРµР»РєРѕР·РµСЂРЅРёСЃС‚Р°СЏ, РїРѕС‡С‚Рё РїРёР»РёС‚РѕРІР°СЏ</p></li>
+		<li><p>СЃР»Р°РЅС†РµРІР°С‚Р°СЏ </p></li>
+		<li><p>РјСѓСЃРєРѕРІРёС‚, РєРІР°СЂС†, С…Р»РѕСЂРёС‚</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>шелковистый блеск, ориентированное расположение чешуек слюд</p></li>
-		<li><p>образовалась  прогрессивным метаморфизмом из глин, низкотемпературная метаморфическая горная порода</p></li>
+		<li><p>С€РµР»РєРѕРІРёСЃС‚С‹Р№ Р±Р»РµСЃРє, РѕСЂРёРµРЅС‚РёСЂРѕРІР°РЅРЅРѕРµ СЂР°СЃРїРѕР»РѕР¶РµРЅРёРµ С‡РµС€СѓРµРє СЃР»СЋРґ</p></li>
+		<li><p>РѕР±СЂР°Р·РѕРІР°Р»Р°СЃСЊ  РїСЂРѕРіСЂРµСЃСЃРёРІРЅС‹Рј РјРµС‚Р°РјРѕСЂС„РёР·РјРѕРј РёР· РіР»РёРЅ, РЅРёР·РєРѕС‚РµРјРїРµСЂР°С‚СѓСЂРЅР°СЏ РјРµС‚Р°РјРѕСЂС„РёС‡РµСЃРєР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -128,18 +128,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="хлоритовый_сланец.jpg"/><center>
+<center><img class="i1" src="С…Р»РѕСЂРёС‚РѕРІС‹Р№_СЃР»Р°РЅРµС†.jpg"/><center>
 <div class="desc">
-	<h1>хлоритовый_сланец</h1>
+	<h1>С…Р»РѕСЂРёС‚РѕРІС‹Р№_СЃР»Р°РЅРµС†</h1>
 	<ol>
-		<li><p>темно-серый, почти черный, зеленоватый</p></li>
-		<li><p>полнокристаллическая</p></li>
-		<li><p>плотная сланцеватая</p></li>
-		<li><p>хлорит, кварц, карбонаты, тальк, роговая обманка</p></li>
-		<li><p>средняя</p></li>
+		<li><p>С‚РµРјРЅРѕ-СЃРµСЂС‹Р№, РїРѕС‡С‚Рё С‡РµСЂРЅС‹Р№, Р·РµР»РµРЅРѕРІР°С‚С‹Р№</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ</p></li>
+		<li><p>РїР»РѕС‚РЅР°СЏ СЃР»Р°РЅС†РµРІР°С‚Р°СЏ</p></li>
+		<li><p>С…Р»РѕСЂРёС‚, РєРІР°СЂС†, РєР°СЂР±РѕРЅР°С‚С‹, С‚Р°Р»СЊРє, СЂРѕРіРѕРІР°СЏ РѕР±РјР°РЅРєР°</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>мягкие/жирные на ощупь, листоватые/чешуйчатые</p></li>
-		<li><p>образовались метаморфозом интрузивных и эффузивных магматических пород и осадочных(богатых кальцием, магнием и железом), метаморфическая горная порода</p></li>
+		<li><p>РјСЏРіРєРёРµ/Р¶РёСЂРЅС‹Рµ РЅР° РѕС‰СѓРїСЊ, Р»РёСЃС‚РѕРІР°С‚С‹Рµ/С‡РµС€СѓР№С‡Р°С‚С‹Рµ</p></li>
+		<li><p>РѕР±СЂР°Р·РѕРІР°Р»РёСЃСЊ РјРµС‚Р°РјРѕСЂС„РѕР·РѕРј РёРЅС‚СЂСѓР·РёРІРЅС‹С… Рё СЌС„С„СѓР·РёРІРЅС‹С… РјР°РіРјР°С‚РёС‡РµСЃРєРёС… РїРѕСЂРѕРґ Рё РѕСЃР°РґРѕС‡РЅС‹С…(Р±РѕРіР°С‚С‹С… РєР°Р»СЊС†РёРµРј, РјР°РіРЅРёРµРј Рё Р¶РµР»РµР·РѕРј), РјРµС‚Р°РјРѕСЂС„РёС‡РµСЃРєР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -147,18 +147,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="слюдяной_сланец.jpg"/><center>
+<center><img class="i1" src="СЃР»СЋРґСЏРЅРѕР№_СЃР»Р°РЅРµС†.jpg"/><center>
 <div class="desc">
-	<h1>слюдяной_сланец</h1>
+	<h1>СЃР»СЋРґСЏРЅРѕР№_СЃР»Р°РЅРµС†</h1>
 	<ol>
-		<li><p>от черно-коричневого до бежево-коричневого с золотистым/стеклянным блеском</p></li>
-		<li><p>полнокристаллическая, разнозернистая</p></li>
-		<li><p>сланцеватая текстура</p></li>
-		<li><p>зерна кварца, хлорита и слюд</p></li>
-		<li><p>средняя</p></li>
+		<li><p>РѕС‚ С‡РµСЂРЅРѕ-РєРѕСЂРёС‡РЅРµРІРѕРіРѕ РґРѕ Р±РµР¶РµРІРѕ-РєРѕСЂРёС‡РЅРµРІРѕРіРѕ СЃ Р·РѕР»РѕС‚РёСЃС‚С‹Рј/СЃС‚РµРєР»СЏРЅРЅС‹Рј Р±Р»РµСЃРєРѕРј</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ, СЂР°Р·РЅРѕР·РµСЂРЅРёСЃС‚Р°СЏ</p></li>
+		<li><p>СЃР»Р°РЅС†РµРІР°С‚Р°СЏ С‚РµРєСЃС‚СѓСЂР°</p></li>
+		<li><p>Р·РµСЂРЅР° РєРІР°СЂС†Р°, С…Р»РѕСЂРёС‚Р° Рё СЃР»СЋРґ</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>блеск слюды, структура, текстура</p></li>
-		<li><p>образовались при повышении t и g из филлитов, среднетемпературные метаморфические горные породы</p></li>
+		<li><p>Р±Р»РµСЃРє СЃР»СЋРґС‹, СЃС‚СЂСѓРєС‚СѓСЂР°, С‚РµРєСЃС‚СѓСЂР°</p></li>
+		<li><p>РѕР±СЂР°Р·РѕРІР°Р»РёСЃСЊ РїСЂРё РїРѕРІС‹С€РµРЅРёРё t Рё g РёР· С„РёР»Р»РёС‚РѕРІ, СЃСЂРµРґРЅРµС‚РµРјРїРµСЂР°С‚СѓСЂРЅС‹Рµ РјРµС‚Р°РјРѕСЂС„РёС‡РµСЃРєРёРµ РіРѕСЂРЅС‹Рµ РїРѕСЂРѕРґС‹</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -166,18 +166,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="амфиболит.jpg"/><center>
+<center><img class="i1" src="Р°РјС„РёР±РѕР»РёС‚.jpg"/><center>
 <div class="desc">
-	<h1>амфиболит</h1>
+	<h1>Р°РјС„РёР±РѕР»РёС‚</h1>
 	<ol>
-		<li><p>коричнево-палевый, с темно-серыми и зеленоватыми оттенками</p></li>
-		<li><p>полнокристаллическая</p></li>
-		<li><p>разнообразная, чаще всего плотная, ориентированная</p></li>
-		<li><p>роговая обманка/плагиоклаз(кварц, эпидот, гранат, хлорит, биотит)</p></li>
-		<li><p>средняя</p></li>
+		<li><p>РєРѕСЂРёС‡РЅРµРІРѕ-РїР°Р»РµРІС‹Р№, СЃ С‚РµРјРЅРѕ-СЃРµСЂС‹РјРё Рё Р·РµР»РµРЅРѕРІР°С‚С‹РјРё РѕС‚С‚РµРЅРєР°РјРё</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ</p></li>
+		<li><p>СЂР°Р·РЅРѕРѕР±СЂР°Р·РЅР°СЏ, С‡Р°С‰Рµ РІСЃРµРіРѕ РїР»РѕС‚РЅР°СЏ, РѕСЂРёРµРЅС‚РёСЂРѕРІР°РЅРЅР°СЏ</p></li>
+		<li><p>СЂРѕРіРѕРІР°СЏ РѕР±РјР°РЅРєР°/РїР»Р°РіРёРѕРєР»Р°Р·(РєРІР°СЂС†, СЌРїРёРґРѕС‚, РіСЂР°РЅР°С‚, С…Р»РѕСЂРёС‚, Р±РёРѕС‚РёС‚)</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>чаще всего видна полосчатость</p></li>
-		<li><p>образовались при возрастании степени метаморфизма из хлоритовых сланцев, метаморфическая горная порода</p></li>
+		<li><p>С‡Р°С‰Рµ РІСЃРµРіРѕ РІРёРґРЅР° РїРѕР»РѕСЃС‡Р°С‚РѕСЃС‚СЊ</p></li>
+		<li><p>РѕР±СЂР°Р·РѕРІР°Р»РёСЃСЊ РїСЂРё РІРѕР·СЂР°СЃС‚Р°РЅРёРё СЃС‚РµРїРµРЅРё РјРµС‚Р°РјРѕСЂС„РёР·РјР° РёР· С…Р»РѕСЂРёС‚РѕРІС‹С… СЃР»Р°РЅС†РµРІ, РјРµС‚Р°РјРѕСЂС„РёС‡РµСЃРєР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
