--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 				<center><h3><a href="rand.html">рандомный камень</a></h3></center>
 				<p><img src="box.jpg"/></p>
 			</article>
+			<article>
+				<center><h3><a href="rand.html">экзамен по геологии</a></h3></center>
+				<p><img src=".jpg"/></p>
+				<form>
+					<input type = "text" id="in_g_ex"  size="40" value="" placeholder="введите номер вопроса">
+					<input id="g_ex_b" type="button" onclick="location.href= 'geo_exam/' + document.getElementById('in_g_ex').value + '.html'" class="button"  value="go!">
+					
+				</form>
+			</article>
 		</div>
 	</body>
 
