--- a/geo_exam/1.html
+++ b/geo_exam/1.html
@@ -50,14 +50,375 @@ R полярн=6356,78км; R экв=6378,16км;
 наоборот). Земля входит в земную группу планет; Третья от Солнца; Отстоит от Солнца на 149
 млн км;
 	</p>
+</div>
+	<div class="main_d">
+	<h2>Форма земли, понятие о сфероиде трехосном элипсоиде и геоиде</h2>
 	<p>
-
+Диаметр З.,-13000км; масса 5,98х1024кг, плотность 5510кг/м3;период вращения 23ч56м41с;
+площадь поверхности 510млн км2 .
 	</p>
 	<p>
-
+Земля представляет собой трехосный элипсоид (сфероид) (элипсоид Красовского) - поверхность
+совпадающая со средним уровнем моря воображаемой вращающейся З. Несколько ближе к
+реальной форме З является ГЕОИД-эквипотенциальная поверхность не возмущенного океана
+продолженной на континенты. Сила тяжести в каждой точке поверхности геоида направлена
+перпендикулярно к ней. Геоид и элипсоид не совпадают, расхождение ~150м.
 	</p>
-	
-	
+	<p>
+По современным данным З близка к КАРДИОНАЛЬНОМУ ТРЕХОСНОМУ
+ЭЛИПСОИДУ(КАРДИОИДУ). Суть: южный пояс расположен на 242м ближе к экватору, чем
+северный.
+	</p>
+	</div>
+		<div class="main_d">
+	<h2>№3. Магнитное поле земли его происхождение и эволюция</h2>
+	<p>
+Магнитное Поле характеризуется : склонением D, наклонением I и напряженностью H (в теслах).
+	</p>
+	<p>
+Источники энергии З: Радиоактивные вещ-ва, кристаллизация Fe, твердые приливы, дефир в
+пределах ядра.
+	</p>
+	<p>
+Изогон - карты линий равных величин магнитных склонений. Со скоростью 22км в год смещаются
+в западном направлении, это связано с генерацией МПЗ;
+	</p>
+	<p>
+Изоклин - линии равных магнитных наклонения.
+	</p>
+	<p>
+Изопор – линии равные годовым изменениям какого-либо изменения элемента Магнитного поля.
+	</p>
+	<p>
+Напряженность МП З~ 0,5 Э
+	</p>
+	<p>
+Происхождение МП-обусловлено внутренней динамикой З. Основ. гипотеза-наличие жидкой
+сферической оболочки внешнего ядра и вращение З. Поскольку нижняя граница внешнего ядра
+имеет более высокую t, чем верхняя , может возникнуть конвекция. Более лёгкая нагретая
+жидкость будет подниматься вверх, а более холодная и плотная-вниз. Конвекция обусловлена
+действием Архимедовой силы.
+	</p>
+	<p>
+Движения в ядре обусловлены необходимостью передачи тепла наружу, а Магн. П является
+побочным продуктом вызванным тем, что жидкость оказалась электропроводной .
+	</p>
+	<p>
+МП - дипольно, ось диполя близка к оси вращения.
+	</p>
+	</div>
+		<div class="main_d">
+	<h2>№4. Теловой поток, геотермический градиент, геотермическая ступень.</h2>
+	<p>
+Каждый год З выделяет в космос 1021 дж тепла. Не вся солнечная энергия достигает З, часть её
+рассеивается за счёт отражения атмосферой.
+	</p>
+	<p>
+Глубинные источники тепла: 1)Процесс гравитационной дифференц. – играет роль формирование
+земного ядра состоит 1/3 массы всей планеты
+	</p>
+	<p>
+2) Распад радиоактивных элементов - в ядре рад.акт элементы отсутствуют они сосредоточены в
+земной коре и мантии.
+	</p>
+	<p>
+3)Приливное взаимодействие З и Луны.-притяжение луны вызывает на З приливные вздутия,
+перемещающиеся по поверхности З, при этом кинетическая энергия переходит в тепловую.
+	</p>
+	<p>
+Разогрев З на ранних стадиях осуществлялся за счёт выделения тепла при соударениях планет с
+Землей в период аккреции за счет ударов метеоритов.
+	</p>
+	<p>
+Хондриты-каменные метеориты, хондры-сфероидные включения, погруженные в мелкозерненую
+фракцию.
+	</p>
+	<p>
+Скорость возрастания температуры с глубиной везде разная.
+	</p>
+	<p>
+Геотермический градиент-величина хар-ая увеличение температуры при погружении на 1м.
+(градусы/100м)
+	</p>
+	<p>
+Геотермическая ступень- обратная величина, глубина при погружении на которую темпер
+увеличивается на 1С
+	</p>
+	<p>
+ТП оценивается кол-ом тепла поступившее снизу на площади 1м2 за 1сек. Q=kG (к-
+теплопроводность; G-геотерм градиент )
+	</p>
+	<p>
+	Наиболее низкий ТП хар-т древние докембрийские платформы. Более высокий Тп-
+эпипалеозойские молодые плиты. Чем моложе гео-структура тем выше средний ТП.
+	</p>
+	</div>
+		<div class="main_d">
+	<h2>№5. Физические свойства и состав сферических оболочек и ядра Земли. Методы изучения.</h2>
+	<p>
+О глубинном строении Земли судят по продольным и поперечным сейсмическим волнам,
+которые, распространяясь внутри Земли, испытывают преломление, отражение и затухание, что
+свидетельствует о расслоенности З. Выделяют три главные (оболочки):
+	</p>
+	<p>
+* земная кора;
+	</p>
+	<p>
+* мантия: верхняя до глубины 900 км, нижняя до глубины 2900 км;
+	</p>
+	<p>
+* ядро Земли внешнее (жидкое) до глубины 5120 км, внутреннее (твердое) до глубины 6371 км.
+	</p>
+	<p>
+Земная кора — это твердая каменная оболочка Земли. Толщина ее колеблется от 5—10 км в
+океанах и до 70— 80 км на материках. Поверхность МОХОРОВИЧА-граница сейсмического
+раздела между земной корой и мантией. Бывает два типа коры — континентальная и
+океаническая. По скорости распространения сейсмических волн в земной коре материков
+выделяют три слоя: верхний — «осадочный», средний — «гранитный» и нижний —
+«базальтовый». Они различаются химическим и минеральным составом, физическими свойствами
+слагающих их горных пород.
+	</p>
+	<p>
+Осадочный слой сложен продуктами разрушения пород «гранитного» слоя. Он покрывает почти
+всю поверхность Земли .
+	</p>
+	<p>
+Средний слой «гранитный» его толщина достигает на континентах в среднем 15 км.
+	</p>
+	<p>
+«Базальтовый» слой - толщина на континентах достигает 20—35 км.
+	</p>
+	<p>
+Мантия- разделяется на нижнюю и верхнюю(входит в астеносферу)
+	</p>
+	<p>
+Земля имеет 6 оболочек: атмосферу, гидросферу, биосферу, литосферу, пиросферу и центросферу.
+	</p>
+	<p>
+Атмосфера—внешняя газовая оболочка Земли. Ее нижняя граница проходит по литосфере и
+гидросфере, а верхняя—на высоте 1000 км. В атмосфере различают тропосферу (двигающийся
+слой), стратосферу (слой над тропосферой) и ионосферу (верхний слой).
+	</p>
+	<p>
+Гидросфера занимает 71% поверхности Земли. Ее средняя соленость составляет 35 г/л.
+Температура океанической поверхности — от 3 до 32 °С, плотность — около 1 Солнечный свет
+проникает на глубину 200 м, а ультрафиолетовые лучи — на глубину до 800 м.
+	</p>
+	<p>
+Биосфера сливается с атмосферой, гидросферой и литосферой. Ее верхняя граница достигает
+верхних слоев тропосферы, нижняя — проходит по дну океанских впадин. Биосфера
+подразделяется на сферу растений (свыше 500 000 видов) и сферу животных (свыше 1 000 000
+видов).
+	</p>
+	<p>
+Литосфера—каменная оболочка Земли—толщиной от 40 до 100 км. Она включает материки,
+острова и дно океанов.
+	</p>
+	<p>
+Под литосферой расположена пиросфера — огненная оболочка Земли. Ее температура
+повышается примерно на 1°С на каждые 33 м глубины. Породы на значительных глубинах
+вследствие высоких температур и большого давления, вероятно, находятся в расплавленном
+состоянии.
+	</p>
+	<p>
+Центросфера, или ядро Земли, на глубине 1800 км., она состоит из Fe и Ni. Давление Земли
+достигает 3000000 атмосфер, температура— нескольких тысяч градусов, В каком состоянии
+находится ядро, неизвестно.
+	</p>
+	<p>
+Методы изучения
+	</p>
+	<p>
+1 Методы полевой геологической съемки
+	</p>
+	<p>
+2  Геофизические методы - используются для изучения глубинного строения Земли и литосферы.
+Сейсмические методы, основанные на изучении скорости распространения продольных и
+поперечных волн, позволили выделить внутренние оболочки Земли. Гравиметрические методы,
+изучающие вариации силы тяжести на поверхности Земли, позволяют обнаружить полож., и
+отриц., гравитационные аномалии. Палеомагнитный метод изучает ориентировку намагниченных
+кристаллов в слоях горных пород. 
+	</p>
+	<p>
+3 Астрономические и космические мет- изуч метеоритов, приливно-отливных движений
+литосферы, а также на исследовании других планет и З.,(из космоса).
+	</p>
+	<p>
+4 Методы моделирования
+	</p>
+	<p>
+5 Метод актуализма - протекающие геологические процессы ведут к образованию определенных
+комплексов горных пород следов., наличие в древних слоях таких же пород свидет-ет об
+идентичных современным процессах, происходивших в прошлом.
+	</p>
+	<p>
+6 Минералогические и петрографические мет- изучают минералы и горн породы.
+	</p>
+	<p>
+7 Гравиметрический мет-изучает изменения силы тяжести
+	</p>
+	<p>
+8 Магнитометрический - изучение магнитного поля земли
+	</p>
+	<p>
+9 Палеомагнитный- изуч остаточной намагничености горных пород содержащих ферромагнитные
+минералы (магнетит)
+	</p>
+	<p>
+10 Геотермический - изуч телового поля
+	</p>
+	<p>
+11 Геохимические мет- изуч химич элементов и веществ в земн коре.
+	</p>
+	</div>
+		<div class="main_d">
+	<h2>№6. Понятие о тектоносфере литосфере и астеносфере</h2>
+	<p>
+Тектоносфера — это внешняя оболочка Земли, охватывающая земную кору и верхнюю мантию,
+основная область проявления тектонических и магматических процессов. Для тектоносферы
+характерна вертикальная и горизонтальная неоднородность физических свойств и состава
+слагающих её пород.
+	</p>
+	<p>
+Литосфера— твёрдая оболочка Земли. Состоит из земной коры и верхней части мантии, до
+астеносферы, где скорости сейсмических волн понижаются, свидетельствуя об изменении
+пластичности пород. В строении литосферы выделяют подвижные области и относительно
+стабильные платформы.
+	</p>
+	<p>
+Астеносфера —верхний пластичный слой верхней мантии планеты (пример: астеносфера Земли),
+называемый также слоем Гутенберга. Выше астеносферы залегает литосфера.  На Земле кровля
+астеносферы лежит на глубинах 80-100 км (под материками) и 50-70 км (под океанами). Нижняя
+граница земной астеносферы — на глубине 250-300 км, нерезкая.
+	</p>
+	</div>
+		<div class="main_d">
+	<h2>№7. Строение континентальной и океанской земной коры</h2>
+	<p>
+Континентальный тип:
+	</p>
+	<p>
+Слои-осадочный, гранитный, (граница Конрада), базальтовый; Суммар.мощность – 20-70 км.
+	</p>
+	<p>
+Платформы (мощность) – 30-40км (0-5км + 10-25км + 15-25км); В горах – 50-60км (0-15км + 20-
+25км + 20-35км);
+	</p>
+	<p>
+Океанский тип:
+	</p>
+	<p>
+Отсутствует гранитный слой; Мощность – 5-12км;
+	</p>
+	<p>
+Слои-рыхлый осадочный (100м – 1км), базальтовые лавы+прослои карбонатов и кремния (1-2км),
+базальтовый (4-8км).
+	</p>
+	<p>
+Скорость распространения продольных сейсмоволн увеличивается с глубиной от 3км/с до 5км/с.
+	</p>
+	</div>
+		<div class="main_d">
+	<h2>№8. Метеориты их типы и значение для познания строения земли</h2>
+	<p>
+Метеорит — тело космического происхождения, упавшее на поверхность крупного небесного
+объекта.
+	</p>
+	<p>
+Источником метеоритов является пояс астероидов.
+	</p>
+	<p>
+Метеориты подразделяются на 3 класса: 1.Каменные (наиболее распростр.); 2.Железные; 3.Железо-каменные.
+	</p>
+	<p>
+1.Каменные метеориты (65% от всех находок) Различают хондриты и ахондриты.
+	</p>
+	<p>
+* Хондриты получили свое название благод. Хондрам - мелким сферическим силикатным
+обособлениям. Хондры состоят из: оливина, пироксена, плагиоклаза, стекла. Произошли из
+первичного протопланетного вещества Солнечной системы. Хондриты подразделяются по
+содержанию Fe на ряд типов, наибольший интерес представляют Углистые хондриты
+(содержат больше всего Fe находящегося в силикатах).
+	</p>
+	<p>
+* Ахондриты - не содержат хондр по составу близки к земным магма ультраосновным породам.
+Делятся на богатые Ca (до 25%)и бедные (до 3%).
+	</p>
+	<p>
+2.Железные метеориты - твердый р-р Ni в Fe (никилистое железо).По содержанию Ni делят на
+Октаэдриты - с сод Ni от 6 о 14%
+	</p>
+	<p>
+3.Железо-каменные-состоят из силикатов (оливин, плагиоклаз, пироксен) и никелистого железа
+примерно в одинаковых пропорциях. Вещ-во этих мет. прошло дифференциацию.
+	</p>
+	<p>
+Возраст метеоритов. Определяется радиоизотопным ураносвиновым рубидий-стронциевым
+методами.
+	</p>
+	<p>
+Происхождение метеоритов. Гипотеза о происхождении мет., в поясе между Марсом и
+Юпитером. Астероиды в разных частях пояса могли иметь различный хим сост., и в начале
+образования они подвергались нагреву. Поэтому хондриты, ахондриты, углистые хондриты
+соответствуют различным участкам раздробившегося родительского астероида. Однако доказано
+что часть мет., происходит с поверхности Луны и Марса.
+	</p>
+	</div>
+		<div class="main_d">
+	<h2>№9. Понятие о магме летучие и нелетучие компоненты магмы</h2>
+	<p>
+Магма —расплавленное вещество, которое образуется при опред., значениях p и t, и
+представляет собой флюидно-силикатный расплав, т.е. содержит соединения с к SiO2 и летучие
+вещества в виде газа. При затвердевании магматического расплава он теряет летучие
+компоненты, поэтому горные породы беднее летучими газами, нежели магма. Силикатные
+магматические расплавы состоят из SiO2 - тетраэдров. Если степень полимеризации низка то
+тетраэдры изолированы; если высока они сливаются в цепочки, кольца и др.
+	</p>
+	<p>
+Магма застывает при:
+1) уменьшении t; 
+2) увеличении p; 
+3) удаление флюидов;
+	</p>
+	<p>
+Магматический расплав - трехкомпонентная система, состоящая из жидкости, газа и твердых
+кристаллов, которая стремится к равновесному состоянию.
+	</p>
+	<p>
+Главные нелетучие петрогенные окислы: SiO2, TiO2, Al2O3, FeО, CaO, MgO, K2O, Na2O(90-97% по
+объему). Летучие компоненты CO2, H2, H2O, HF
+	</p>
+	<p>
+Оксид углерода, водород, вода легко (раньше всего) отдаляются от расплава, способствуя
+образованию «сухих» магм. Фтор и другие летучие компоненты накапливаются в расплаве, так как
+они трудно отделимы от него.
+	</p>
+	</div>
+		<div class="main_d">
+	<h2>№10. Магматизм формы его проявления</h2>
+	<p>
+Под магматизмом понимаются сложные процессы возникновения магмы в глубине земной коры
+или в подкорковой области и перемещениях ее к поверхности З.
+	</p>
+	<p>
+В завис от характера движения магмы выделяют: Интрузивный и эффузивный.
+	</p>
+	<p>
+При Интрузивном магматизме магма внедряется в верхние горизонты и не выходя на поверхность
+застывает на глубине, образуя разнообразные тела. Если магматические расплавы вырываются на
+поверхность, то происходят извержения вулканов. Такой тип магматизма называют - Эффузивным.
+	</p>
+	<p>
+Нередко извержения вулканов носят взрывной характер, при котором магма не изливается, а
+взрывается и на земную поверхность выпадают тонкораздробленные кристаллы и застывшие
+капельки и осколки стекла — быстро охлажденного расплава - эксплозивными.
+	</p>
+	<p>
+Следует различать интрузивные процессы, связанные с образованием и движением магмы ниже
+поверхности Земли, и вулканические процессы, обусловленные выходом магмы на земную
+поверхность.
+	</p>
+	</div>
 	
 	
 	
