--- a/geo_exam/1 — копия (12).html
+++ b/geo_exam/1 — копия (12).html
@@ -6,14 +6,14 @@
 		<meta http-equiv="Content-Tipe" content="text/html; charset=UTF-8"/>
 		<link href="style.css" rel="stylesheet" type="text/css"/>
 		<link rel="icon" href="../favicon.ico" type="image/x-icon">
-		<title>геология 1-10</title>
+		<title>геология 1</title>
 		<script href="js.js"></script>
 	</head>
 
 	<body>
 	
 	<header>
-		<h1>№№ 1-10</h1>
+		<h1></h1>
 	</header>
 	
 	<div class="main_d">
